@@ -73,6 +73,7 @@ S3method(syllables,character)
 S3method(syllables,tokenizedTexts)
 S3method(texts,corpus)
 S3method(texts,corpusSource)
+S3method(toLower,"NULL")
 S3method(toLower,character)
 S3method(toLower,corpus)
 S3method(toLower,tokenizedTexts)
