@@ -84,7 +84,9 @@ removeFeatures.tokenizedTexts <- function(x, stopwords=NULL, verbose=TRUE, ...) 
     if (is.null(stopwords))
         stop("Must supply a character vector of stopwords, e.g. stopwords(\"english\")")
     # much faster than any regex method
-    lapply(x, function(x) x[which(!(toLower(x) %in% stopwords))])
+    result <- lapply(x, function(x) x[which(!(toLower(x) %in% stopwords))])
+    class(result) <- c("tokenizedTexts", class(result))
+    result
 }
     
     
@@ -278,9 +280,15 @@ selectFeatures.dfm <- function(x, features = NULL, selection = c("keep", "remove
         else featIndex <- which(features(x) %in% features)
     }
 
-    if (verbose) cat(ifelse(selection=="keep", "kept", "removed"), 
+    if (verbose) cat(ifelse(selection=="keep", "kept", "removed"), " ", 
                      format(length(featIndex), big.mark=","),
-                     "features, from", length(features), "supplied feature types\n")
+                     " feature", ifelse(length(featIndex) > 1 | length(featIndex)==0, "s", ""), 
+                     ", from ", length(features), " supplied feature type",
+                     ifelse(length(features) > 0 | length(featIndex)==0, "s", ""),
+                     "\n", sep = "")
+    # if no features were removed, return original dfm
+    if (length(featIndex) == 0)
+        return(x)
     if (selection == "keep")
         return(x[, featIndex])
     else
